--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,58 @@ nav .menu-desktop .menu-logo-container-mobile {
     padding: 0.5rem 0.5rem;
 }
 
+.burger-icon {
+    width: 30px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    position: relative;
+}
+
+.burger-icon-line {
+    width: 100%;
+    height: 4px;
+    /* background-color: #fff; */
+    background-color: black;
+    transition: all 0.3s ease;
+}
+
+.burger-icon-line.open:nth-child(1) {
+    transform: rotate(45deg);
+    position: absolute;
+    top: 50%; /* Center the line */
+    left: 0;
+    transform-origin: center; /* Rotate around the center */
+}
+
+.burger-icon-line.open:nth-child(2) {
+    opacity: 0;
+}
+
+.burger-icon-line.open:nth-child(3) {
+    transform: rotate(-45deg);
+    position: absolute;
+    top: 50%; /* Center the line */
+    left: 0;
+    transform-origin: center; /* Rotate around the center */
+}
+
+.menu-options-mobile {
+    display: none;
+}
+
+.menu-options-mobile.open {
+    display: flex;
+    flex-direction: column;
+}
+.menu-options-mobile .menu-options-item {
+    margin-top: 5px;
+    border-bottom: 1px solid rgb(219, 229, 230);
+    padding: 1rem 0;
+}
+
 .content-card {
     display: flex;
     border: 1px solid #e0e0e0;
@@ -210,6 +262,10 @@ img.right-container__preview-img {
     gap: 1rem;
 }
 
+.burger-icon {
+    display: none;
+}
+
 @media screen and (max-width: 1024px) {
     nav .menu-desktop .menu-logo-container-desktop {
         display: none;
@@ -217,5 +273,23 @@ img.right-container__preview-img {
 
     nav .menu-desktop .menu-logo-container-mobile {
         display: block;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .burger-icon {
+        display: flex;
+    }
+
+    /* full menu disable */
+    nav .menu-desktop .menu-options {
+        display: none;
+    }
+}
+
+/* conserva el estado del menu abierto considerando el width del screen */
+@media (min-width: 901px) {
+    .menu-options-mobile.open {
+        display: none;
     }
 }
