--- a/src/App.css
+++ b/src/App.css
@@ -348,9 +348,18 @@ img.right-container__preview-img {
     padding: 0;
 }
 
+.container-footer-info-2_item-list {
+    color: rgb(115, 115, 115);
+}
+
 .container-lowest-footer {
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid rgb(219, 229, 230);
+    color: rgb(115, 115, 115);
+    font-family: Heebo, sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .container-lowest-footer-list {
@@ -372,6 +381,7 @@ img.right-container__preview-img {
     }
 }
 
+/* 900px o menos */
 @media screen and (max-width: 900px) {
     .burger-icon {
         display: flex;
@@ -384,6 +394,25 @@ img.right-container__preview-img {
 
     .content-card {
         flex-direction: column-reverse;
+    }
+
+    .container-footer-info {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container-footer-info-2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: space-between;
+        row-gap: 0.5rem;
+    }
+
+    .container-lowest-footer {
+        /* reduce size of child element */
+        font-size: 0.8rem;
     }
 }
 
