--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ nav .menu-desktop .menu-logo-container-mobile {
     display: inline-flex;
     justify-content: center;
     overflow: hidden;
+    font-size: 0.8rem;
 }
 
 .left-container__right-1 {
@@ -113,10 +114,13 @@ nav .menu-desktop .menu-logo-container-mobile {
     color: rgb(255, 255, 255);
     border: 0;
     font-family: Barlow, sans-serif;
-    font-size: 1rem;
-    padding: 0rem 0.75rem;
+    /* font-size: 1rem; */
+    padding: 0rem 0.5rem;
     font-weight: 700;
     line-height: 1.5;
+    /* align text vertically */
+    display: flex;
+    align-items: center;
 }
 
 .left-container__right-2 {
@@ -124,10 +128,11 @@ nav .menu-desktop .menu-logo-container-mobile {
     color: rgb(106, 190, 205);
     border: 0;
     font-family: Barlow, sans-serif;
-    font-size: 1rem;
-    padding: 0rem 0.75rem;
+    padding: 0rem 0.1rem;
     font-weight: 700;
     line-height: 1.5;
+    display: flex;
+    align-items: center;
 }
 
 .left-container-title {
@@ -199,6 +204,8 @@ img.right-container__preview-img {
 .left-container__left-tags {
     display: flex;
     gap: 10px;
+    /* reduce size of child elements */
+    font-size: 0.8rem;
 }
 
 .left-container__left-tags-1 {
