--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 #root {
     max-width: 1280px;
     margin: 0 auto;
-    /* padding: 2rem;
-  text-align: center; */
 }
 
 nav .menu-desktop {
@@ -89,8 +87,8 @@ nav .menu-desktop .menu-logo-container-mobile {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
     margin-top: 100px;
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
     padding: 2.5rem;
     gap: 2rem;
 }
@@ -284,6 +282,7 @@ img.right-container__preview-img {
     display: grid;
     grid-template-columns: 0.4fr 0.6fr;
     gap: 4%;
+    margin-bottom: 40px;
 }
 
 .container-footer-info-1 {
